tests/ui/lang/core/array/array_0.stderr
error: evaluation of constant value failed: cannot index into [i32; 0]
  --> $DIR/array_0.rs:10:13
   |
10 |     let x = array[0];
   |             ^^^^^^^^

error: aborting due to 1 previous error

